// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/createDOMElement prop "accessibilityLabel" 1`] = `
<span
  aria-label="accessibilityLabel"
/>
`;

exports[`modules/createDOMElement prop "accessibilityLiveRegion" 1`] = `
<span
  aria-live="off"
/>
`;

exports[`modules/createDOMElement prop "accessibilityRole" button 1`] = `
<button
  role="button"
  type="button"
/>
`;

exports[`modules/createDOMElement prop "accessibilityRole" compatibility with accessibilityComponentType 1`] = `
<button
  role="button"
  type="button"
/>
`;

exports[`modules/createDOMElement prop "accessibilityRole" compatibility with accessibilityComponentType 2`] = `
<a
  role="link"
/>
`;

exports[`modules/createDOMElement prop "accessibilityRole" compatibility with accessibilityTraits 1`] = `
<button
  role="button"
  type="button"
/>
`;

exports[`modules/createDOMElement prop "accessibilityRole" compatibility with accessibilityTraits 2`] = `
<a
  role="link"
/>
`;

exports[`modules/createDOMElement prop "accessibilityRole" headings 1`] = `
<h1
  role="heading"
/>
`;

exports[`modules/createDOMElement prop "accessibilityRole" headings 2`] = `
<h3
  aria-level="3"
  role="heading"
/>
`;

exports[`modules/createDOMElement prop "accessibilityRole" link and target="_blank" 1`] = `
<a
  rel=" noopener noreferrer"
  role="link"
  target="_blank"
/>
`;

exports[`modules/createDOMElement prop "accessibilityRole" roles 1`] = `
<header
  role="banner"
/>
`;

exports[`modules/createDOMElement prop "accessible" 1`] = `
<span
  tabindex="0"
/>
`;

exports[`modules/createDOMElement prop "accessible" 2`] = `<span />`;

exports[`modules/createDOMElement prop "importantForAccessibility" 1`] = `<span />`;

exports[`modules/createDOMElement prop "importantForAccessibility" 2`] = `<span />`;

exports[`modules/createDOMElement prop "importantForAccessibility" 3`] = `
<span
  aria-hidden="true"
/>
`;

exports[`modules/createDOMElement prop "importantForAccessibility" 4`] = `<span />`;

exports[`modules/createDOMElement prop "testID" 1`] = `
<span
  data-testid="Example.testID"
/>
`;

exports[`modules/createDOMElement renders correct DOM element 1`] = `<span />`;

exports[`modules/createDOMElement renders correct DOM element 2`] = `<main />`;
